Bullet Types and display

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -26,7 +26,7 @@ sector.exogenesis-typhoon.details =
 sector.exogenesis-castle.description = Castle
 sector.exogenesis-castle.details =
 
-##Sepurlo units
+#Sepurlo units
 unit.exogenesis-paroxysm.name = Paroxysm
 unit.exogenesis-paroxysm.description =
 unit.exogenesis-avicularia.name = Avicularia
@@ -90,7 +90,7 @@ unit.exogenesis-helios.name = [#98ffa9]Sol[]
 unit.exogenesis-helios.description = The Orbital Laser Titan
 unit.exogenesis-helios.details =
 
-##Erekir units
+#Erekir units
 unit.exogenesis-prometheus.name = [#ffb98b]T1-R.F Prometheus[]
 unit.exogenesis-prometheus.description = The [#ffb98b]Rolling Fortress Titan[]. The [#ffb98b]T1-RF Prometheus[] is a heavy duty siege unit with thick armoring and high health. Sporting a quad barrel main cannon and  armed with four mounted artillery cannon.
 unit.exogenesis-prometheus.details = One of the first of the erekir titans developed by [#9681fb]Malis[] in response to something being discovered on Erekir.
@@ -268,21 +268,21 @@ item.exogenesis-curtuses.name = Curtuses
 item.exogenesis-curtuses.description =  tech and crafting.
 item.exogenesis-astrolite.name = Astrolite
 item.exogenesis-astrolite.description = A mineral that is commonly found on the cold world of the Genesuxians. Used in various Genesuxian tech and crafting.
-##Align
-##Turrets
-##2x2
+#Align
+#Turrets
+#2x2
 block.exogenesis-astral.name = Astral
 block.exogenesis-astral.description =
 block.exogenesis-starFleet.name = StarFleet
 block.exogenesis-starFleet.description =
-##3x3
+#3x3
 block.exogenesis-cosmos.name = Cosmos
 block.exogenesis-cosmos.description =
 block.exogenesis-armada.name = Armada
 block.exogenesis-armada.description =
 block.exogenesis-astrology.name = Astrology
 block.exogenesis-astrology.description =
-##4x4
+#4x4
 block.exogenesis-stellar.name = Stellar
 block.exogenesis-stellar.description =
 block.exogenesis-coldPlasmaThrower.name = ColdPlasmaThrower
@@ -291,7 +291,7 @@ block.exogenesis-sagittarius.name = Sagittarius
 block.exogenesis-sagittarius.description =
 block.exogenesis-nebula.name = Nebula
 block.exogenesis-nebula.description =
-##5x5
+#5x5
 block.exogenesis-halley.name = Halley
 block.exogenesis-halley.description =
 block.exogenesis-magnetar.name = Magnetar
@@ -300,7 +300,7 @@ block.exogenesis-thuban.name = Thuban
 block.exogenesis-thuban.description =
 block.exogenesis-neutronMortar.name = Neutron Mortar
 block.exogenesis-neutronMortar.description =
-##8x8
+#8x8
 block.exogenesis-supernova.name = Supernova
 block.exogenesis-supernova.description =
 block.exogenesis-polaris.name = Polaris
@@ -308,7 +308,7 @@ block.exogenesis-polaris.description =
 block.exogenesis-theia.name = Theia
 block.exogenesis-theia.description =
 
-##Align units
+#Align units
 unit.exogenesis-orion.name = orion
 unit.exogenesis-orion.description =
 unit.exogenesis-galileo.name = Galileo
@@ -342,9 +342,9 @@ unit.exogenesis-sentinel.description =
 unit.exogenesis-overseer.name = Overseer
 unit.exogenesis-overseer.description =
 
-##Empyrean
-##Turrets
-##2x2
+#Empyrean
+#Turrets
+#2x2
 block.exogenesis-focalPoint.name = Focal Point
 block.exogenesis-focalPoint.description =
 block.exogenesis-light.name = Light
@@ -355,7 +355,7 @@ block.exogenesis-gale.name = Gale
 block.exogenesis-gale.description =
 block.exogenesis-cleanser.name = Cleanser
 block.exogenesis-cleanser.description =
-##3x3
+#3x3
 block.exogenesis-tanons.name = Tanons
 block.exogenesis-tanons.description =
 block.exogenesis-glory.name = Glory
@@ -364,7 +364,7 @@ block.exogenesis-essence.name = Essence
 block.exogenesis-essence.description =
 block.exogenesis-sanctify.name = Sanctify
 block.exogenesis-sanctify.description =
-##4x4
+#4x4
 block.exogenesis-excalibur.name = Excalibur
 block.exogenesis-excalibur.description =
 block.exogenesis-godsent.name = Godsent
@@ -375,7 +375,7 @@ block.exogenesis-aspect.name = Aspect
 block.exogenesis-aspect.description =
 block.exogenesis-blessing.name = Blessing
 block.exogenesis-blessing.description =
-##5x5
+#5x5
 block.exogenesis-grandeur.name = Grandeur
 block.exogenesis-grandeur.description =
 block.exogenesis-sacrosanct.name = sacrosanct
@@ -384,13 +384,13 @@ block.exogenesis-aether.name = Aether
 block.exogenesis-aether.description =
 block.exogenesis-agios.name = Agios
 block.exogenesis-agios.description =
-##8x8
+#8x8
 block.exogenesis-arbiter.name = Arbiter
 block.exogenesis-arbiter.description =
 block.exogenesis-phoss.name = Phoss
 block.exogenesis-phoss.description =
 
-## General blocks
+# General blocks
 block.exogenesis-ductEmpyrean.name = Empyrean duct
 block.exogenesis-ductEmpyrean.description =
 block.exogenesis-ductEmpyreanBridge.name = Empyrean Duct Bridge
@@ -491,7 +491,7 @@ block.exogenesis-coreReliance.name = Core: Reliance
 block.exogenesis-coreReliance.description =
 
 
-##Empyrean units
+#Empyrean units
 unit.exogenesis-soul.name = Lux
 unit.exogenesis-soul.description =
 unit.exogenesis-pneuma.name = Glimmer
@@ -550,25 +550,25 @@ stat.overheat-cooldown = Overheat Cooldown
 stat.resistance = Resistance List
 
 content.effect_UNUSED.name = Damage Type
-damage.kinetic.name = Kinetic
+damage.kinetic.name = [#ebb778]Kinetic[]
 damage.kinetic.description = Use kinetic collision to deal significant damage to enemies.
 #damage.kinetic.details =
-damage.explosive.name = Explosive
+damage.explosive.name = [#f98f4a]Explosive[]
 damage.explosive.description = Targeted blasting. Very effective against most enemies.
 #damage.explosive.details =
-damage.pierce.name = Pierce
+damage.pierce.name = [#e2f5fb]Pierce[]
 damage.pierce.description = Sharpened attack, Shattering enemy armor and causing damage.
 #damage.pierce.details =
-damage.energy.name = Energy
+damage.energy.name = [#5f97eb]Energy[]
 damage.energy.description = The form of pure energy. Effective against certain enemies.
 #damage.energy.details =
-damage.thermal.name = Thermal
+damage.thermal.name = [#e34047]Thermal[]
 damage.thermal.description = Pure heat that molten enemies which are weak against heat.
 #damage.thermal.details =
-damage.cryogenic.name = Cryogenic
+damage.cryogenic.name = [#74c2e8]Cryogenic[]
 damage.cryogenic.description = Freezing attack inflict damage to enemies with low temperature.
 #damage.cryogenic.details =
-damage.radiation.name = Radiation
+damage.radiation.name = [#bcff73]Radiation[]
 damage.radiation.description = High Radiation to damage enemies with vicious way.
 #damage.radiation.details =
 
