--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -585,3 +585,5 @@ planet.exogenesis-axin.description = sector.
 
 exo.damage-resistance = [red]{0}% Resistance[]
 exo.damage-weakness = [accent]{0}% Weakness[]
+exo.damage-resistance-unit = [accent]{0}% Resistance[]
+exo.damage-weakness-unit = [red]{0}% Weakness[]
