dagger line resistances

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -551,25 +551,28 @@ stat.resistance = Resistance List
 
 content.effect_UNUSED.name = Damage Type
 damage.kinetic.name = [#ebb778]Kinetic[]
-damage.kinetic.description = Use kinetic collision to deal significant damage to enemies.
+damage.kinetic.description = A common damage type dealt by most Item ammunition. This damage type is often resisted by armored units, such as Assault type units.
 #damage.kinetic.details =
 damage.explosive.name = [#f98f4a]Explosive[]
-damage.explosive.description = Targeted blasting. Very effective against most enemies.
+damage.explosive.description = A damage type typically dealt by AOE Ammunition. This damage type is most effective against units with pierce resistance armouring such as some assault type units.
 #damage.explosive.details =
 damage.pierce.name = [#e2f5fb]Pierce[]
-damage.pierce.description = Sharpened attack, Shattering enemy armor and causing damage.
+damage.pierce.description = A damage type dealt typical by bullets design to be fast, precises and on a single target. Units With explosive resistant armour are typically vulnerable to this.
 #damage.pierce.details =
 damage.energy.name = [#5f97eb]Energy[]
-damage.energy.description = The form of pure energy. Effective against certain enemies.
+damage.energy.description = A common Damage type dealt by power based turrets. This damage type is typically most effective against units with kinetic resistance.
 #damage.energy.details =
 damage.thermal.name = [#e34047]Thermal[]
-damage.thermal.description = Pure heat that molten enemies which are weak against heat.
+damage.thermal.description = A damage type dealt by turrets which typical utilize heat to inflict damage. This damage type is typically effective against units with cryogenic resistance or light armoring.
 #damage.thermal.details =
 damage.cryogenic.name = [#74c2e8]Cryogenic[]
-damage.cryogenic.description = Freezing attack inflict damage to enemies with low temperature.
+damage.cryogenic.description = A damage type dealt by some turrets, utilizing low temperature to weaken structure and internals. This damage type is typically effective against units with thermal resistance or light armoring.
 #damage.cryogenic.details =
 damage.radiation.name = [#bcff73]Radiation[]
-damage.radiation.description = High Radiation to damage enemies with vicious way.
+damage.radiation.description = dealt via high energy radiation, this damage type is effect against units with resistant to physical damage types such as, Kinetic, Pierce and Explosive.
+#damage.radiation.details =
+damage.graviton.name = [#6657ae]Graviton[]
+damage.graviton.description = Dealt via gravitational manipulation, this damage type is effect against units with energy based resistances, such Energy, Thermal, and cryogenic.
 #damage.radiation.details =
 
 planet.exogenesis-zetaTitanus.name = Zeta Titanus
