bundle improvement and outline

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -573,7 +573,7 @@ damage.radiation.description = dealt via high energy radiation, this damage type
 #damage.radiation.details =
 damage.graviton.name = [#6657ae]Graviton[]
 damage.graviton.description = Dealt via gravitational manipulation, this damage type is effect against units with energy based resistances, such Energy, Thermal, and cryogenic.
-#damage.radiation.details =
+#damage.graviton.details =
 
 planet.exogenesis-zetaTitanus.name = Zeta Titanus
 planet.exogenesis-zetaTitanus.description = sector.
