--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -575,6 +575,8 @@ damage.graviton.name = [#6657ae]Graviton[]
 damage.graviton.description = Dealt via gravitational manipulation, this damage type is effect against units with energy based resistances, such Energy, Thermal, and cryogenic.
 #damage.graviton.details =
 
+bullet.exogenesis-sus-turret-sus-ammo = [accent]SUS [sky]AMMO[]
+
 planet.exogenesis-zetaTitanus.name = Zeta Titanus
 planet.exogenesis-zetaTitanus.description = sector.
 planet.exogenesis-hadroxa.name = Hadroxa
