Vanstar unit stuff

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -347,8 +347,12 @@ unit.exogenesis-overseer.description =
 #2x2
 block.exogenesis-focalPoint.name = Focal Point
 block.exogenesis-focalPoint.description =
+
 block.exogenesis-light.name = Light
 block.exogenesis-light.description =
+bullet.exogenesis-light-kinetic-beam = [#ebb778]kinetic [sky]Beam[]
+bullet.exogenesis-light-piercer-rounds = [#e2f5fb]Piercer [sky]Rounds[]
+
 block.exogenesis-bliss.name = Bliss
 block.exogenesis-bliss.description =
 block.exogenesis-gale.name = Gale
@@ -574,8 +578,6 @@ damage.radiation.description = dealt via high energy radiation, this damage type
 damage.graviton.name = [#6657ae]Graviton[]
 damage.graviton.description = Dealt via gravitational manipulation, this damage type is effect against units with energy based resistances, such Energy, Thermal, and cryogenic.
 #damage.graviton.details =
-
-bullet.exogenesis-sus-turret-sus-ammo = [accent]SUS [sky]AMMO[]
 
 planet.exogenesis-zetaTitanus.name = Zeta Titanus
 planet.exogenesis-zetaTitanus.description = sector.
