Vanstar unit stuff

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -350,18 +350,23 @@ block.exogenesis-focalPoint.description =
 
 block.exogenesis-light.name = Light
 block.exogenesis-light.description =
-bullet.exogenesis-light-kinetic-beam = [#ebb778]kinetic [sky]Beam[]
-bullet.exogenesis-light-piercer-rounds = [#e2f5fb]Piercer [sky]Rounds[]
 
 block.exogenesis-bliss.name = Bliss
 block.exogenesis-bliss.description =
+bullet.exogenesis-bliss-base-rounds = [#ebb778]Base [sky]Beam[]
+bullet.exogenesis-bliss-piercer-rounds = [#e2f5fb]Piercer [sky]Rounds[]
+
 block.exogenesis-gale.name = Gale
 block.exogenesis-gale.description =
 block.exogenesis-cleanser.name = Cleanser
 block.exogenesis-cleanser.description =
 #3x3
+
 block.exogenesis-tanons.name = Tanons
 block.exogenesis-tanons.description =
+bullet.exogenesis-tanons-thunderbolt-rounds = [#fee761]Thunderbolt [sky]rounds[]
+bullet.exogenesis-tanons-ball-lightning-rounds = [#fee761]Ball lightning [sky]Rounds[]
+
 block.exogenesis-glory.name = Glory
 block.exogenesis-glory.description =
 block.exogenesis-essence.name = Essence
@@ -371,6 +376,9 @@ block.exogenesis-sanctify.description =
 #4x4
 block.exogenesis-excalibur.name = Excalibur
 block.exogenesis-excalibur.description =
+bullet.exogenesis-excalibur-energy-artillery-rounds = [#5f97eb]Energy [sky]artillery[]
+bullet.exogenesis-excalibur-thermal-bombardment-rounds = [#e34047]Thermal [sky]bombardment[]
+
 block.exogenesis-godsent.name = Godsent
 block.exogenesis-godsent.description =
 block.exogenesis-eminence.name = Eminence
