--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -364,8 +364,8 @@ block.exogenesis-cleanser.description =
 
 block.exogenesis-tanons.name = Tanons
 block.exogenesis-tanons.description =
-bullet.exogenesis-tanons-thunderbolt-rounds = [#fee761]Thunderbolt [sky]rounds[]
-bullet.exogenesis-tanons-ball-lightning-rounds = [#fee761]Ball lightning [sky]Rounds[]
+bullet.exogenesis-tanons-thunderbolt-rounds = [#fee761]Thunderbolt rounds[]
+bullet.exogenesis-tanons-ball-lightning-rounds = [#fee761]Ball lightning Rounds[]
 
 block.exogenesis-glory.name = Glory
 block.exogenesis-glory.description =
@@ -376,8 +376,8 @@ block.exogenesis-sanctify.description =
 #4x4
 block.exogenesis-excalibur.name = Excalibur
 block.exogenesis-excalibur.description =
-bullet.exogenesis-excalibur-energy-artillery-rounds = [#5f97eb]Energy [sky]artillery[]
-bullet.exogenesis-excalibur-thermal-bombardment-rounds = [#e34047]Thermal [sky]bombardment[]
+bullet.exogenesis-excalibur-energy-artillery = [#5f97eb]Energy [sky]artillery[]
+bullet.exogenesis-excalibur-thermal-bombardment = [#e34047]Thermal [sky]bombardment[]
 
 block.exogenesis-godsent.name = Godsent
 block.exogenesis-godsent.description =
