Vanstar unit stuff

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -160,12 +160,25 @@ unit.exogenesis-cronus.name = [#ff6363]T7-S.M Hephaestus[]
 unit.exogenesis-cronus.description = Swarm Mother
 unit.exogenesis-cronus.details =
 
+item.exogenesis-exoGraphite.name = Graphite
+item.exogenesis-exoGraphite.description = Used in electrical components and turret ammunition.
+item.exogenesis-exoSilicon.name = silicon
+item.exogenesis-exoSilicon.description = Used in solar panels, complex electronics and homing turret ammunition.
+item.exogenesis-exoMetaglass.name = Metaglass
+item.exogenesis-exoMetaglass.description = Used in liquid distribution/storage structures.
+item.exogenesis-exoThorium.name = Thorium
+item.exogenesis-exoThorium.description = Used in durable structures and as nuclear fuel.
+
+item.exogenesis-alumina.name = Alumina
+item.exogenesis-alumina.description = An alumina oxide power mainly utilized in production.
+item.exogenesis-thermite.name = Thermite
+item.exogenesis-thermite.description = A pyrotechnic composition, used in turret ammunition and factory production.
 item.exogenesis-osmium.name = Osmium
 item.exogenesis-osmium.description = A dense and durable metal used in various structure construction
 item.exogenesis-gold.name = Gold
 item.exogenesis-gold.description = A Soft metal that is an excellent conductor of heat and electricity. Resistant to corrosion.
-item.exogenesis-leadZinc.name = Lead Zinc
-item.exogenesis-leadZinc.description =
+item.exogenesis-lead-zinc.name = Lead Zinc
+item.exogenesis-lead-zinc.description =
 item.exogenesis-uranimite.name = Uranimite
 item.exogenesis-uranimite.description =
 
@@ -193,6 +206,15 @@ item.exogenesis-eternion-core.description =
 item.exogenesis-rad-core.name = Rad Core
 item.exogenesis-rad-core.description =
 
+liquid.exogenesis-ichorium.name = Ichorium
+liquid.exogenesis-ichorium.description = A brightly glowing fluid potent with energy often used in Empyrean turrets to accelerate fire rate.
+liquid.exogenesis-krypton.name = Krypton
+liquid.exogenesis-krypton.description = A noble gas used in certain technology.
+liquid.exogenesis-helium.name = Helium
+liquid.exogenesis-helium.description = A noble gas used as ammunition for certain turrets.
+liquid.exogenesis-scalvaur.name = Scalvaur
+liquid.exogenesis-scalvaur.description = a gas common in the vanster atmosphere, with high conductive properties. Commonly used to power certain turrets.
+
 item.exogenesis-vanstar-basalt.name = Vanstar Basalt
 item.exogenesis-vanstar-basalt.description = Common vanstar igneous rock, used to grind down and extracted minerals.
 item.exogenesis-lightning-stone.name = lightning Stone
@@ -211,6 +233,8 @@ item.exogenesis-empyrean-plating.name = Empyrean plating
 item.exogenesis-empyrean-plating.description = An armor plating used to bolster structures and armor structures. Is heavily used in unit construction.
 item.exogenesis-magnetite.name = Magnetite
 item.exogenesis-magnetite.description = A mineral whose primary component is an iron oxide, it is ferromagnetic,and cna be utilized within electrical structures.
+item.exogenesis-ferric-powder.name = Ferric Powder
+item.exogenesis-ferric-powder.description = A powder rich in iron oxide used in production especially that of iron.
 item.exogenesis-iron.name = Iron
 item.exogenesis-iron.description = an abundant and durable metal found across vanster. Used with a wide variety of structures.
 item.exogenesis-quartz.name = Quartz
@@ -367,6 +391,10 @@ block.exogenesis-tanons.description =
 bullet.exogenesis-tanons-thunderbolt-rounds = [#fee761]Thunderbolt rounds[]
 bullet.exogenesis-tanons-ball-lightning-rounds = [#fee761]Ball lightning Rounds[]
 
+block.exogenesis-purger.name = Purger
+block.exogenesis-purger.description =
+block.exogenesis-prism.name = Prism
+block.exogenesis-prism.description =
 block.exogenesis-glory.name = Glory
 block.exogenesis-glory.description =
 block.exogenesis-essence.name = Essence
@@ -390,6 +418,8 @@ block.exogenesis-blessing.description =
 #5x5
 block.exogenesis-grandeur.name = Grandeur
 block.exogenesis-grandeur.description =
+block.exogenesis-profane.name = Profane
+block.exogenesis-profane.description =
 block.exogenesis-sacrosanct.name = sacrosanct
 block.exogenesis-sacrosanct.description =
 block.exogenesis-aether.name = Aether
@@ -397,100 +427,123 @@ block.exogenesis-aether.description =
 block.exogenesis-agios.name = Agios
 block.exogenesis-agios.description =
 #8x8
+block.exogenesis-haborym.name = Haborym
+block.exogenesis-haborym.description =
 block.exogenesis-arbiter.name = Arbiter
 block.exogenesis-arbiter.description =
 block.exogenesis-phoss.name = Phoss
 block.exogenesis-phoss.description =
 
 # General blocks
-block.exogenesis-ductEmpyrean.name = Empyrean duct
-block.exogenesis-ductEmpyrean.description =
-block.exogenesis-ductEmpyreanBridge.name = Empyrean Duct Bridge
-block.exogenesis-ductEmpyreanBridge.description =
-block.exogenesis-empyreanSorter.name = Empyrean Sorter
-block.exogenesis-empyreanSorter.description =
-block.exogenesis-empyreanJunction.name = Empyrean Junction
-block.exogenesis-empyreanJunction.description =
-block.exogenesis-empyreanRouter.name = Empyrean Router
-block.exogenesis-empyreanRouter.description =
+block.exogenesis-empyrean-duct.name = Empyrean duct
+block.exogenesis-empyrean-duct.description =
+block.exogenesis-empyrean-duct-bridge.name = Empyrean Duct Bridge
+block.exogenesis-empyrean-duct-bridge.description =
+block.exogenesis-empyrean-sorter.name = Empyrean Sorter
+block.exogenesis-empyrean-sorter.description =
+block.exogenesis-empyrean-junction.name = Empyrean Junction
+block.exogenesis-empyrean-junction.description =
+block.exogenesis-empyrean-router.name = Empyrean Router
+block.exogenesis-empyrean-router.description =
 
-block.exogenesis-drainPipe.name = Drain Pipe
-block.exogenesis-drainPipe.description =
-block.exogenesis-drainPipeRouter.name = Drain Pipe Router
-block.exogenesis-drainPipeRouter.description =
-block.exogenesis-pulsePump.name = Pulse Pump
-block.exogenesis-pulsePump.description =
-block.exogenesis-pulseImpactPump.name = Pulse Impact Pump
-block.exogenesis-pulseImpactPump.description =
-block.exogenesis-liquidCup.name = Liquid Holder
-block.exogenesis-liquidCup.description =
-block.exogenesis-liquidTankEmpyrean.name = Empyrean Liquid Tank
-block.exogenesis-liquidTankEmpyrean.description =
+block.exogenesis-drain-pipe.name = Drain Pipe
+block.exogenesis-drain-pipe.description =
+block.exogenesis-drain-pipe-router.name = Drain Pipe Router
+block.exogenesis-drain-pipe-router.description =
+block.exogenesis-pulse-pump.name = Pulse Pump
+block.exogenesis-pulse-pump.description =
+block.exogenesis-pulse-impact-pump.name = Pulse Impact Pump
+block.exogenesis-pulse-impact-pump.description =
+block.exogenesis-liquid-cup.name = Liquid Holder
+block.exogenesis-liquid-cup.description =
+block.exogenesis-liquid-tank-empyrean.name = Empyrean Liquid Tank
+block.exogenesis-liquid-tank-empyrean.description =
 
-block.exogenesis-luxNode.name = Lux Node
-block.exogenesis-luxNode.description =
-block.exogenesis-luxTower.name = Lux Tower
-block.exogenesis-luxTower.description =
-block.exogenesis-oltuxiumBattery.name = Oltuxium Battery
-block.exogenesis-oltuxiumBattery.description =
-block.exogenesis-oltuxiumBatteryLarge.name = Large Oltuxium Battery
-block.exogenesis-oltuxiumBatteryLarge.description =
-block.exogenesis-energyExtractor.name = Energy Extractor
-block.exogenesis-energyExtractor.description =
-block.exogenesis-energyExtractorMedium.name = Medium Energy Extractor
-block.exogenesis-energyExtractorMedium.description =
+block.exogenesis-lux-node.name = Volt Node
+block.exogenesis-lux-node.description =
+block.exogenesis-lux-tower.name = Volt Tower
+block.exogenesis-lux-tower.description =
+block.exogenesis-oltuxium-battery.name = Oltuxium Battery
+block.exogenesis-oltuxium-battery.description =
+block.exogenesis-oltuxium-battery-large.name = Large Oltuxium Battery
+block.exogenesis-oltuxium-battery-large.description =
+block.exogenesis-energy-extractor.name = Energy Extractor
+block.exogenesis-energy-extractor.description =
+block.exogenesis-energy-extractorMedium.name = Medium Energy Extractor
+block.exogenesis-energy-extractorMedium.description =
+block.exogenesis-harvester-medium.name = Ichorium Harvester Medium
+block.exogenesis-harvester-medium.description =
+block.exogenesis-harvester-small.name = Ichorium Harvester Small
+block.exogenesis-harvester-small.description =
 
-block.exogenesis-pulsarDrill.name = Pulsar Drill
-block.exogenesis-pulsarDrill.description =
-block.exogenesis-pulseImpactDrill.name = Pulse Impact Drill
-block.exogenesis-pulseImpactDrill.description =
-block.exogenesis-quaryDrill.name = Quarry Drill
-block.exogenesis-quaryDrill.description =
-block.exogenesis-pulsarWallDrill.name = Pulsar Wall Drill
-block.exogenesis-pulsarWallDrill.description =
-block.exogenesis-smallWallGrinder.name = Small Wall Grinder
-block.exogenesis-smallWallGrinder.description =
-block.exogenesis-wallGrinder.name = Large Wall Grinder
-block.exogenesis-wallGrinder.description =
+block.exogenesis-pulsar-drill.name = Pulsar Drill
+block.exogenesis-pulsar-drill.description =
+block.exogenesis-pulse-impact-drill.name = Pulse Impact Drill
+block.exogenesis-pulse-impact-drill.description =
+block.exogenesis-quary-drill.name = Quarry Drill
+block.exogenesis-quary-drill.description =
+block.exogenesis-pulsar-wall-drill.name = Pulsar Wall Drill
+block.exogenesis-pulsar-wall-drill.description =
+block.exogenesis-small-wall-grinder.name = Small Wall Grinder
+block.exogenesis-small-wall-grinder.description =
+block.exogenesis-wall-grinder.name = Large Wall Grinder
+block.exogenesis-wall-grinder.description =
 
-block.exogenesis-platingFactory.name = Plating Factory
-block.exogenesis-platingFactory.description =
-block.exogenesis-sandSift.name = Sand Sift
-block.exogenesis-sandSift.description =
-block.exogenesis-rockGrinder.name = Rock Grinder
-block.exogenesis-rockGrinder.description =
-block.exogenesis-ironFurnace.name = Iron Furnace
-block.exogenesis-ironFurnace.description =
-block.exogenesis-alloyForge.name = Silic Forge
-block.exogenesis-alloyForge.description =
-block.exogenesis-metaglassForger.name = Metaglass Forger
-block.exogenesis-metaglassForger.description =
-block.exogenesis-listusiumForge.name = Listusium Forge
-block.exogenesis-listusiumForge.description =
-block.exogenesis-vanstaniumOven.name = Vanstanium Oven
-block.exogenesis-vanstaniumOven.description =
+block.exogenesis-thermite-mixer.name = Thermite Mixer
+block.exogenesis-thermite-mixer.description =
+block.exogenesis-alumina-processor.name = Alumina Processor
+block.exogenesis-alumina-processor.description =
+block.exogenesis-krypton-factory.name = Krypton Factory
+block.exogenesis-krypton-factory.description =
+block.exogenesis-helium-factory.name = Helium Factory
+block.exogenesis-helium-factory.description =
+block.exogenesis-atmospheric-extractor.name = Atmospheric Extractor
+block.exogenesis-atmospheric-extractor.description =
+
+block.exogenesis-plating-factory.name = Plating Factory
+block.exogenesis-plating-factory.description =
+block.exogenesis-sand-sift.name = Sand Sift
+block.exogenesis-sand-sift.description =
+block.exogenesis-rock-grinder.name = Rock Grinder
+block.exogenesis-rock-grinder.description =
+block.exogenesis-iron-furnace.name = Iron Furnace
+block.exogenesis-iron-furnace.description =
+block.exogenesis-alloy-forge.name = Silic Forge
+block.exogenesis-alloy-forge.description =
+block.exogenesis-metaglass-forger.name = Metaglass Forger
+block.exogenesis-metaglass-forger.description =
+block.exogenesis-listusium-forger.name = Listusium Forge
+block.exogenesis-listusium-forger.description =
+block.exogenesis-vanstanium-oven.name = Vanstanium Oven
+block.exogenesis-vanstanium-oven.description =
+block.exogenesis-alpha-forge.name = Vansterium Forge
+block.exogenesis-alpha-forge.description =
 block.exogenesis-osmiumBlastForge.name = Osmium Blast Forge
 block.exogenesis-osmiumBlastForge.description =
 
-block.exogenesis-coboltWall.name = Cobolt Wall
-block.exogenesis-coboltWall.description =
-block.exogenesis-largeCoboltWall.name = large Cobolt Wall
-block.exogenesis-largeCoboltWall.description =
-block.exogenesis-oltuxiumWall.name = Oltuxium Wall
-block.exogenesis-oltuxiumWall.description =
-block.exogenesis-largeOltuxiumWall.name = Large Oltuxium Wall
-block.exogenesis-largeOltuxiumWall.description =
-block.exogenesis-ironWall.name = Iron Wall
-block.exogenesis-ironWall.description =
-block.exogenesis-largeIronWall.name = Large Iron Wall
-block.exogenesis-largeIronWall.description =
-block.exogenesis-listusiumWall.name = Listusium Wall
-block.exogenesis-listusiumWall.description =
-block.exogenesis-largeListusiumWall.name = largeListusiumWall
-block.exogenesis-largeListusiumWall.description = largeListusiumWall
+block.exogenesis-cobolt-wall.name = Cobolt Wall
+block.exogenesis-cobolt-wall.description =
+block.exogenesis-large-cobolt-wall.name = large Cobolt Wall
+block.exogenesis-large-cobolt-wall.description =
+block.exogenesis-oltuxium-wall.name = Oltuxium Wall
+block.exogenesis-oltuxium-wall.description =
+block.exogenesis-large-oltuxium-wall.name = Large Oltuxium Wall
+block.exogenesis-large-oltuxium-wall.description =
+block.exogenesis-iron-wall.name = Iron Wall
+block.exogenesis-iron-wall.description =
+block.exogenesis-large-iron-wall.name = Large Iron Wall
+block.exogenesis-large-iron-wall.description =
+block.exogenesis-listusium-wall.name = Listusium Wall
+block.exogenesis-listusium-wall.description =
+block.exogenesis-large-listusium-wall.name = large Listusium Wall
+block.exogenesis-large-listusium-wall.description =
 
-block.exogenesis-empyreanFactory.name = Empyrean Factory
-block.exogenesis-empyreanFactory.description =
+block.exogenesis-unitManufactory.name = Unit Manufacturer
+block.exogenesis-unitManufactory.description =
+block.exogenesis-stormGuard.name = Storm Guarder
+block.exogenesis-stormGuard.description =
+block.exogenesis-arielRestrictor.name = Medicus Projector
+block.exogenesis-arielRestrictor.description =
 
 block.exogenesis-medicusProjector.name = Medicus Projector
 block.exogenesis-medicusProjector.description =
@@ -504,6 +557,13 @@ block.exogenesis-coreReliance.description =
 
 
 #Empyrean units
+unit.exogenesis-priest.name = Priest
+unit.exogenesis-priest.description =
+unit.exogenesis-bishop.name = Bishop
+unit.exogenesis-bishop.description =
+unit.exogenesis-apostle.name = Apostle
+unit.exogenesis-apostle.description =
+
 unit.exogenesis-soul.name = Lux
 unit.exogenesis-soul.description =
 unit.exogenesis-pneuma.name = Glimmer
@@ -524,7 +584,18 @@ unit.exogenesis-shine.description =
 unit.exogenesis-auric.name = Auric
 unit.exogenesis-auric.description =
 unit.exogenesis-radiance.name = Radiance
-unit.exogenesis-radiance.description ==
+unit.exogenesis-radiance.description =
+
+unit.exogenesis-flicker.name = Flicker
+unit.exogenesis-clicker.description =
+unit.exogenesis-ember.name = Ember
+unit.exogenesis-ember.description =
+unit.exogenesis-blaze.name = Blaze
+unit.exogenesis-blaze.description =
+unit.exogenesis-pyric.name = Pyric
+unit.exogenesis-pyric.description =
+unit.exogenesis-phlogiston.name = Phlogiston
+unit.exogenesis-phlogiston.description =
 
 unit.exogenesis-prayer.name = Prayer
 unit.exogenesis-prayer.description =
