Vanstar unit stuff

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -370,40 +370,40 @@ unit.exogenesis-overseer.description =
 #Turrets
 #2x2
 block.exogenesis-focalPoint.name = Focal Point
-block.exogenesis-focalPoint.description =
+block.exogenesis-focalPoint.description = A Basic laser turret dealing high single target pierce damage
 
 block.exogenesis-light.name = Light
-block.exogenesis-light.description =
+block.exogenesis-light.description = A Basic turret which speed up the longer it fires dealing energy damage.
 
 block.exogenesis-bliss.name = Bliss
-block.exogenesis-bliss.description =
-bullet.exogenesis-bliss-base-rounds = [#ebb778]Base [sky]Beam[]
+block.exogenesis-bliss.description = A basic turret with two firing modes, dealing either pierce or energy damage.
+bullet.exogenesis-bliss-base-rounds = [#ebb778]Base [sky]Rounds[]
 bullet.exogenesis-bliss-piercer-rounds = [#e2f5fb]Piercer [sky]Rounds[]
 
 block.exogenesis-gale.name = Gale
-block.exogenesis-gale.description =
+block.exogenesis-gale.description = Only targets air units with flak rounds dealing explosive damage.
 block.exogenesis-cleanser.name = Cleanser
-block.exogenesis-cleanser.description =
+block.exogenesis-cleanser.description = Fire energy rounds dealing low damage but slowing down targets.
 #3x3
 
 block.exogenesis-tanons.name = Tanons
-block.exogenesis-tanons.description =
+block.exogenesis-tanons.description = An energy turret which can switch between single target lighting bolts and ball lightning.
 bullet.exogenesis-tanons-thunderbolt-rounds = [#fee761]Thunderbolt rounds[]
 bullet.exogenesis-tanons-ball-lightning-rounds = [#fee761]Ball lightning Rounds[]
 
 block.exogenesis-purger.name = Purger
-block.exogenesis-purger.description =
+block.exogenesis-purger.description = Fires high damage piercing rounds, dealing both energy and pierce damage. Speeds up over time
 block.exogenesis-prism.name = Prism
-block.exogenesis-prism.description =
+block.exogenesis-prism.description = A direct upgrade to the Focal. Deals high pierce damage to a single target.
 block.exogenesis-glory.name = Glory
-block.exogenesis-glory.description =
+block.exogenesis-glory.description = Capable of launching 3 different types of rockets either higher high damage, AOE, or capable of slowing down enemies.
 block.exogenesis-essence.name = Essence
-block.exogenesis-essence.description =
+block.exogenesis-essence.description = A machine gun turret which speeds up over time, dealing kinetic damage
 block.exogenesis-sanctify.name = Sanctify
-block.exogenesis-sanctify.description =
+block.exogenesis-sanctify.description = Fires a barrage of bullets dealing kinetic damage. Uses peridotite as ammunition.
 #4x4
 block.exogenesis-excalibur.name = Excalibur
-block.exogenesis-excalibur.description =
+block.exogenesis-excalibur.description = An energy artillery turret, fires a barrage of either thermal or energy rounds over a wide area.
 bullet.exogenesis-excalibur-energy-artillery = [#5f97eb]Energy [sky]artillery[]
 bullet.exogenesis-excalibur-thermal-bombardment = [#e34047]Thermal [sky]bombardment[]
 
