--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,26 @@
-name: Java CI
+name: Build Mod
 
 on: [push, pull_request]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - name: Set up PATH
+        run: |
+          echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v1
         with:
           java-version: 17
-          distribution: temurin
-      - name: Build mod artifact
+      - name: Build mod jar
         run: |
-          chmod +x gradlew
-          ./gradlew clean dex
-      - name: Upload built mod artifact
+          chmod +x ./gradlew
+          ./gradlew deploy
+      - name: Upload built jar file
         uses: actions/upload-artifact@v4
         with:
-          name: ExogenesisMod (zipped)
-          path: build/libs/ExogenesisMod.jar
+          name: ${{ github.event.repository.name }}
+          path: build/libs/${{ github.event.repository.name }}.jar
