--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build Mod
+name: Java CI
 
 on: [push, pull_request]
 
@@ -7,20 +7,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up PATH
-        run: |
-          echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
+      - uses: actions/checkout@v4
+
+
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: 17
-      - name: Build mod jar
+          distribution: temurin
+      - name: Build mod artifact
         run: |
-          chmod +x ./gradlew
-          ./gradlew deploy
-      - name: Upload built jar file
+          chmod +x gradlew
+          ./gradlew clean dex
+      - name: Upload built mod artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}
-          path: build/libs/${{ github.event.repository.name }}.jar
+          name: ExogenesisMod (zipped)
+          path: build/libs/ExogenesisMod.jar
